style: fix unread indicator z-index position

--- a/src/routes/chat/chatContent/chatMessages/ChatMessages.scss
+++ b/src/routes/chat/chatContent/chatMessages/ChatMessages.scss
@@ -9,6 +9,7 @@
   }
 
   &__unread {
+    z-index: 1;
     font-size: 0.8rem;
     cursor: pointer;
     text-transform: capitalize;
